logs/sbgsdk.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/auth'...
Listing './lib/python3.5/site-packages/docker/unixconn'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker_py-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/sbdk'...
Listing './lib/python3.5/site-packages/sbdk/commands'...
Compiling './lib/python3.5/site-packages/sbdk/commands/login.py'...
***   File "./lib/python3.5/site-packages/sbdk/commands/login.py", line 15
    print project.schema_server_url
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sbdk/docker'...
Compiling './lib/python3.5/site-packages/sbdk/executor.py'...
***   File "./lib/python3.5/site-packages/sbdk/executor.py", line 54
    in_file, out_file = [os.path.join(job_dir, f) for f in '__in__.json', '__out__.json']
                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sbdk/resources'...
Compiling './lib/python3.5/site-packages/sbdk/resources/__init__.py'...
***   File "./lib/python3.5/site-packages/sbdk/resources/__init__.py", line 13
    print "File '{}' already exists, skipping".format(dst_name)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sbdk/resources/example-project'...
Listing './lib/python3.5/site-packages/sbdk/resources/example-project/top_level'...
Listing './lib/python3.5/site-packages/sbdk/resources/example-project/top_level/grep'...
Listing './lib/python3.5/site-packages/sbdk/resources/example-project/top_level/grep/test'...
Listing './lib/python3.5/site-packages/sbdk/tests'...
Compiling './lib/python3.5/site-packages/sbdk/tests/test_commands.py'...
***   File "./lib/python3.5/site-packages/sbdk/tests/test_commands.py", line 99
    except SbdkError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sbgsdk'...
Listing './lib/python3.5/site-packages/sbgsdk/schema'...
Listing './lib/python3.5/site-packages/sbgsdk/tests'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/cli_test'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/cli_test/execute_parallel'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/cli_test/execute_single'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/cli_test/job_submit'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/test_tools'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/test_tools/adder'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/test_tools/comparator'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/test_tools/generator'...
Listing './lib/python3.5/site-packages/sbgsdk/tests/test_wrappers'...
Listing './lib/python3.5/site-packages/sbgsdk-0.6.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Compiling './lib/python3.5/site-packages/websocket.py'...
***   File "./lib/python3.5/site-packages/websocket.py", line 769
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/websocket_client-0.11.0.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
